# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import questsRouter from "./quests";
 import creaturesRouter from "./creatures";
 import achievementsRouter from "./achievements";
+import workoutsRouter from "./workouts";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use("/quests", questsRouter);
 router.use("/creatures", creaturesRouter);
 router.use("/achievements", achievementsRouter);
+router.use("/workouts", workoutsRouter);
 
 export default router;
